--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -32,16 +32,16 @@
                         <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Events</a>
+                        <a class="nav-link" href="#">News</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Tournaments</a>
+                        <a class="nav-link" href="#">Team</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Videos</a>
+                        <a class="nav-link" href="#">Spotlight</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Donations</a>
+                        <a class="nav-link" href="#">Community</a>
                     </li>
                     <!-- <li class="nav-item">
                         <a class="nav-link" href="#">Sign In</a>
@@ -75,10 +75,9 @@
     <hr class="my-4">
     <!--- Two Column Section -->
     <div class="conatiner-fluid padding">
-        <div class="row padding text-center">
+        <div class="row text-center">
             <div class="col-12">
                 <h2 class="display-4">Latest News</h2>
-                <br>
             </div>
         </div>
     </div>
@@ -123,94 +122,86 @@
             </div>
         </div>
     </div>
+    <br>
+    <hr class="my-4">
 
     <!-- Meet the Team -->
     <div class="container-fluid padding">
         <div class="row team-header text-center">
             <div class="col-12">
-                <hr class="my-4">
                 <h1 class="display-4">Meet the Team</h1>
             </div>
+            <hr class="thick-hr">
         </div>
     </div>
 
     <div class="container-fluid padding">
         <div class="row padding">
             <div class="col-md-4">
-                <div class="card">
-                    <img src="img/team1.png" alt="" class="card-img-top">
-                    <div class="card-body">
-                        <h4 class="card-title">Steve Hudgson</h4>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi, quia!</p>
-                        <a href="#" class="btn btn-outline-secondary">See Profile</a>
+                <div class="card" style="border:none;">
+                    <div class="card-body text-center">
+                        <img src="img/profile/default-avatar.png" class="img-fluid" style="border-radius: 50%;">
+                        <h4 class="card-title">Anthony Powell</h4>
+                        <p class="card-text">antpowe11</p>
+                        <a href="https://www.twitch.tv/antpowe11" target="_blank" class="btn btn-outline-secondary">Twitch Channel</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="card">
-                    <img src="img/team2.png" alt="" class="card-img-top">
-                    <div class="card-body">
-                        <h4 class="card-title">Keiwon Mitchell</h4>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi, quia!
-                        </p>
-                        <a href="#" class="btn btn-outline-secondary">See Profile</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <img src="img/team3.png" alt="" class="card-img-top">
-                    <div class="card-body">
+                <div class="card" style="border:none;">
+                    <div class="card-body text-center">
+                        <img src="img/profile/default-avatar.png" class="img-fluid" style="border-radius: 50%;">
                         <h4 class="card-title">Antonio Tavera</h4>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi, quia!
-                        </p>
-                        <a href="#" class="btn btn-outline-secondary">See Profile</a>
+                        <p class="card-text">Lanzeral</p>
+                        <a href="https://www.twitch.tv/lanzeral" target="_blank" class="btn btn-outline-secondary">Twitch Channel</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card" style="border:none;">
+                    <div class="card-body text-center">
+                        <img src="img/profile/default-avatar.png" class="img-fluid" style="border-radius: 50%;">
+                        <h4 class="card-title">Erwin</h4>
+                        <p class="card-text">youngsta4500</p>
+                        <a href="https://www.twitch.tv/youngsta4500" target="_blank" class="btn btn-outline-secondary">Twitch Channel</a>
                     </div>
                 </div>
             </div> 
-        </div> <!-- row close div-->
-    </div> <!-- container close div-->
-
-    <div class="container-fluid padding">
+        </div>
         <div class="row padding">
             <div class="col-md-4">
-                <div class="card">
-                    <img src="img/team1.png" alt="" class="card-img-top">
-                    <div class="card-body">
-                        <h4 class="card-title">Anthony Powell</h4>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi, quia!
-                        </p>
-                        <a href="#" class="btn btn-outline-secondary">See Profile</a>
+                <div class="card" style="border:none;">
+                    <div class="card-body text-center">
+                        <img src="img/profile/default-avatar.png" class="img-fluid" style="border-radius: 50%;">
+                        <h4 class="card-title">Steve Hudgson</h4>
+                        <p class="card-text">Snyperkiller</p>
+                        <a href="https://www.twitch.tv/snyperkiller" target="_blank" class="btn btn-outline-secondary">Twitch Channel</a>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="card">
-                    <img src="img/team2.png" alt="" class="card-img-top">
-                    <div class="card-body">
+                <div class="card" style="border:none;">
+                    <div class="card-body text-center">
+                        <img src="img/profile/default-avatar.png" class="img-fluid" style="border-radius: 50%;">
+                        <h4 class="card-title">Keiwon Mitchell</h4>
+                        <p class="card-text">themagethatsgood</p>
+                        <a href="https://www.twitch.tv/themagethatsgood" target="_blank" class="btn btn-outline-secondary">Twitch Channel</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card" style="border:none;">
+                    <div class="card-body text-center">
+                        <img src="img/profile/default-avatar.png" class="img-fluid" style="border-radius: 50%;">
                         <h4 class="card-title">Johnatan Alejandre</h4>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi, quia!
-                        </p>
-                        <a href="#" class="btn btn-outline-secondary">See Profile</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <img src="img/team3.png" alt="" class="card-img-top">
-                    <div class="card-body">
-                        <h4 class="card-title">Erwin</h4>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi, quia!
-                        </p>
-                        <a href="#" class="btn btn-outline-secondary">See Profile</a>
+                        <p class="card-text">sythryl</p>
+                        <a href="https://www.twitch.tv/sythryl" target="_blank" class="btn btn-outline-secondary">Twitch Channel</a>
                     </div>
                 </div>
             </div> 
-        </div> <!-- row close div-->
-    </div> <!-- container close div-->
+        </div>
+    </div>
 
-
-    <!-- Sportlight -->
     <hr class="my-4">
     <!--- Two Column Section -->
     <div class="conatiner-fluid padding">
@@ -248,14 +239,18 @@
     <!-- Sponsors -->
     <section class="sponsors"></section>
 
-    <!--- Connect -->
-    <div class="cotainer-fluid padding">
-        <div class="row text-center padding">
+    <!--- Donations -->
+    <section class="container-fluid padding">
+        <div class="row mission-header text-center">
             <div class="col-12">
-                <h2 class="display-4">Donations</h2>
+                <h1 class="display-4">Community</h1>
+            </div>
+            <hr>
+            <div class="col-12 mission-statement">
+                <p>Join the discord to learn more!</p>
             </div>
         </div>
-    </div>
+    </section>
 
     <!--- Footer -->
     <footer>
