--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <!-- <link rel="text/JavaScript" src="main.js"> -->
-    
     <title>Black Hammer</title>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+
 </head>
 
 <body>
     <!-- navbar,  -->
-    <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg navbar-light navbar-custom fixed-top shadow rounded">
+    <nav class="navbar navbar-expand-lg navbar-light navbar-custom fixed-top shadow rounded">
+        <div class="container-fluid">
             <a class="navbar-brand" href="#">Black Hammer</a>
 
             <!-- hamburger menu -->
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <ul class="navbar-nav ml-auto">
@@ -48,8 +48,10 @@
                     </li> -->
                 </ul>
             </div>
-        </nav>
-    </div>
+
+        </div>
+    </nav>
+    <!-- <img src="img/hero.jpg" class="img-fluid"> -->
 
     <!-- Slideshow/hero -->
     <!-- note, make a full screen background video of us playing MK 11 in the future :D -->
@@ -68,7 +70,8 @@
             </div>
             <hr>
             <div class="col-12 mission-statement">
-                <p>We are Texas Southern University's esports team. We are looking to unify the gaming community in our college in order to create a gaming hub in the university</p>
+                <p>We are Texas Southern University's esports team. We are looking to unify the gaming community in our
+                    college in order to create a gaming hub in the university</p>
             </div>
         </div>
     </section>
@@ -143,7 +146,8 @@
                         <img src="img/profile/default-avatar.png" class="img-fluid" style="border-radius: 50%;">
                         <h4 class="card-title">Anthony Powell</h4>
                         <p class="card-text">antpowe11</p>
-                        <a href="https://www.twitch.tv/antpowe11" target="_blank" class="btn btn-outline-secondary">Twitch Channel</a>
+                        <a href="https://www.twitch.tv/antpowe11" target="_blank"
+                            class="btn btn-outline-secondary">Twitch Channel</a>
                     </div>
                 </div>
             </div>
@@ -153,7 +157,8 @@
                         <img src="img/profile/default-avatar.png" class="img-fluid" style="border-radius: 50%;">
                         <h4 class="card-title">Antonio Tavera</h4>
                         <p class="card-text">Lanzeral</p>
-                        <a href="https://www.twitch.tv/lanzeral" target="_blank" class="btn btn-outline-secondary">Twitch Channel</a>
+                        <a href="https://www.twitch.tv/lanzeral" target="_blank"
+                            class="btn btn-outline-secondary">Twitch Channel</a>
                     </div>
                 </div>
             </div>
@@ -163,10 +168,11 @@
                         <img src="img/profile/default-avatar.png" class="img-fluid" style="border-radius: 50%;">
                         <h4 class="card-title">Erwin</h4>
                         <p class="card-text">youngsta4500</p>
-                        <a href="https://www.twitch.tv/youngsta4500" target="_blank" class="btn btn-outline-secondary">Twitch Channel</a>
+                        <a href="https://www.twitch.tv/youngsta4500" target="_blank"
+                            class="btn btn-outline-secondary">Twitch Channel</a>
                     </div>
                 </div>
-            </div> 
+            </div>
         </div>
         <div class="row padding">
             <div class="col-md-4">
@@ -175,7 +181,8 @@
                         <img src="img/profile/default-avatar.png" class="img-fluid" style="border-radius: 50%;">
                         <h4 class="card-title">Steve Hudgson</h4>
                         <p class="card-text">Snyperkiller</p>
-                        <a href="https://www.twitch.tv/snyperkiller" target="_blank" class="btn btn-outline-secondary">Twitch Channel</a>
+                        <a href="https://www.twitch.tv/snyperkiller" target="_blank"
+                            class="btn btn-outline-secondary">Twitch Channel</a>
                     </div>
                 </div>
             </div>
@@ -185,7 +192,8 @@
                         <img src="img/profile/default-avatar.png" class="img-fluid" style="border-radius: 50%;">
                         <h4 class="card-title">Keiwon Mitchell</h4>
                         <p class="card-text">themagethatsgood</p>
-                        <a href="https://www.twitch.tv/themagethatsgood" target="_blank" class="btn btn-outline-secondary">Twitch Channel</a>
+                        <a href="https://www.twitch.tv/themagethatsgood" target="_blank"
+                            class="btn btn-outline-secondary">Twitch Channel</a>
                     </div>
                 </div>
             </div>
@@ -195,10 +203,11 @@
                         <img src="img/profile/default-avatar.png" class="img-fluid" style="border-radius: 50%;">
                         <h4 class="card-title">Johnatan Alejandre</h4>
                         <p class="card-text">sythryl</p>
-                        <a href="https://www.twitch.tv/sythryl" target="_blank" class="btn btn-outline-secondary">Twitch Channel</a>
+                        <a href="https://www.twitch.tv/sythryl" target="_blank" class="btn btn-outline-secondary">Twitch
+                            Channel</a>
                     </div>
                 </div>
-            </div> 
+            </div>
         </div>
     </div>
 
@@ -215,7 +224,7 @@
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
         </ol>
-            <div class="carousel-inner">
+        <div class="carousel-inner">
             <div class="carousel-item active">
                 <img src="img/highlight1.jpg" alt="background1">
             </div>
@@ -229,11 +238,11 @@
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
-          </a>
+        </a>
     </div>
 
     <!-- Sponsors -->
@@ -257,13 +266,21 @@
         <div class="cotainer-fluid padding">
             <div class="row text-center">
                 <div class="col-md-4">
-                    <a href="#"><p>Contact us</p></a>
-                    <a href="#"><p>Learn More</p></a>
-                    <a href="#"><p>Partner with us</p></a>
+                    <a href="#">
+                        <p>Contact us</p>
+                    </a>
+                    <a href="#">
+                        <p>Learn More</p>
+                    </a>
+                    <a href="#">
+                        <p>Partner with us</p>
+                    </a>
                 </div>
                 <div class="col-12">
                     <hr class="light">
-                    <a href="#"><h5>&copy; BlackHammer.com</h5></a>
+                    <a href="#">
+                        <h5>&copy; BlackHammer.com</h5>
+                    </a>
                 </div>
             </div>
         </div>
@@ -271,9 +288,15 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 </body>
 <footer></footer>
 
