update on the navbar

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <!-- navbar,  -->
-    <nav class="navbar navbar-expand-lg navbar-light navbar-custom fixed-top shadow rounded">
+    <nav class="navbar navbar-expand-lg navbar-light navbar-custom fixed-top shadow">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Black Hammer</a>
 
@@ -86,7 +86,7 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-sm-6">
                 <div class="news-img1">
                     <div class="news-text">
                         <h5>MK 11 Tournament in the making</h5>
@@ -94,7 +94,7 @@
                 </div>
                 </br>
             </div>
-            <div class="col-md-6">
+            <div class="col-sm-6">
                 <div class="news-img2">
                     <div class="news-text">
                         <h5>Discord Changes</h5>
@@ -107,15 +107,15 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-sm-6">
                 <div class="news-img3">
                     <div class="news-text">
-                        <h5>BlackHammer raids Monster Hunter World</h5>
+                        <h5>BlackHammer raids MHW</h5>
                     </div>
                 </div>
                 </br>
             </div>
-            <div class="col-md-6">
+            <div class="col-sm-6">
                 <div class="news-img4">
                     <div class="news-text">
                         <h5>Lanzeral became an Ambassador</h5>
