--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <div class="col-sm-6">
                 <div class="news-img1">
                     <div class="news-text">
-                        <h5>MK 11 Tournament in the making</h5>
+                        <h5>MK 11 Tournament in <br>the making</h5>
                     </div>
                 </div>
                 </br>
