--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <div class="card" style="border:none;">
                     <div class="card-body text-center">
                         <img src="img/profile/default-avatar.png" class="img-fluid" style="border-radius: 50%;">
-                        <h4 class="card-title">Anthony Powell</h4>
+                        <h4 class="card-title">Anthony</h4>
                         <p class="card-text">antpowe11</p>
                         <a href="https://www.twitch.tv/antpowe11" target="_blank"
                             class="btn btn-outline-secondary">Twitch Channel</a>
@@ -155,7 +155,7 @@
                 <div class="card" style="border:none;">
                     <div class="card-body text-center">
                         <img src="img/profile/default-avatar.png" class="img-fluid" style="border-radius: 50%;">
-                        <h4 class="card-title">Antonio Tavera</h4>
+                        <h4 class="card-title">Antonio</h4>
                         <p class="card-text">Lanzeral</p>
                         <a href="https://www.twitch.tv/lanzeral" target="_blank"
                             class="btn btn-outline-secondary">Twitch Channel</a>
@@ -179,7 +179,7 @@
                 <div class="card" style="border:none;">
                     <div class="card-body text-center">
                         <img src="img/profile/default-avatar.png" class="img-fluid" style="border-radius: 50%;">
-                        <h4 class="card-title">Steve Hudgson</h4>
+                        <h4 class="card-title">Steve</h4>
                         <p class="card-text">Snyperkiller</p>
                         <a href="https://www.twitch.tv/snyperkiller" target="_blank"
                             class="btn btn-outline-secondary">Twitch Channel</a>
@@ -190,7 +190,7 @@
                 <div class="card" style="border:none;">
                     <div class="card-body text-center">
                         <img src="img/profile/default-avatar.png" class="img-fluid" style="border-radius: 50%;">
-                        <h4 class="card-title">Keiwon Mitchell</h4>
+                        <h4 class="card-title">Keiwon</h4>
                         <p class="card-text">themagethatsgood</p>
                         <a href="https://www.twitch.tv/themagethatsgood" target="_blank"
                             class="btn btn-outline-secondary">Twitch Channel</a>
@@ -201,7 +201,7 @@
                 <div class="card" style="border:none;">
                     <div class="card-body text-center">
                         <img src="img/profile/default-avatar.png" class="img-fluid" style="border-radius: 50%;">
-                        <h4 class="card-title">Johnatan Alejandre</h4>
+                        <h4 class="card-title">Johnatan</h4>
                         <p class="card-text">sythryl</p>
                         <a href="https://www.twitch.tv/sythryl" target="_blank" class="btn btn-outline-secondary">Twitch
                             Channel</a>
