--- a/index.html
+++ b/index.html
@@ -43,15 +43,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Community</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="#">Sign In</a>
-                    </li> -->
                 </ul>
             </div>
 
         </div>
     </nav>
-    <!-- <img src="img/hero.jpg" class="img-fluid"> -->
 
     <!-- Slideshow/hero -->
     <!-- note, make a full screen background video of us playing MK 11 in the future :D -->
@@ -265,16 +261,28 @@
     <footer>
         <div class="cotainer-fluid padding">
             <div class="row text-center">
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <a href="#">
                         <p>Contact us</p>
                     </a>
                     <a href="#">
                         <p>Learn More</p>
                     </a>
+
+                </div>
+                <div class="col-md-6">
                     <a href="#">
                         <p>Partner with us</p>
                     </a>
+                    <a href="#">
+                        <p>blackhammer@gmail.com</p>
+                    </a>     
+                    <!-- <a href="#">
+                        <p>Twitter</p>
+                    </a>
+                    <a href="#">
+                        <p>Instagram</p>
+                    </a>      -->
                 </div>
                 <div class="col-12">
                     <hr class="light">
