--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <div class="card-body text-center">
                         <img src="img/profile/default-avatar.png" class="img-fluid" style="border-radius: 50%;">
                         <h4 class="card-title">Anthony</h4>
-                        <p class="card-text">antpowe11</p>
+                        <p class="card-text">@antpowe11</p>
                         <a href="https://www.twitch.tv/antpowe11" target="_blank"
                             class="btn btn-outline-secondary">Twitch Channel</a>
                     </div>
@@ -152,7 +152,7 @@
                     <div class="card-body text-center">
                         <img src="img/profile/default-avatar.png" class="img-fluid" style="border-radius: 50%;">
                         <h4 class="card-title">Antonio</h4>
-                        <p class="card-text">Lanzeral</p>
+                        <p class="card-text">@Lanzeral</p>
                         <a href="https://www.twitch.tv/lanzeral" target="_blank"
                             class="btn btn-outline-secondary">Twitch Channel</a>
                     </div>
@@ -163,7 +163,7 @@
                     <div class="card-body text-center">
                         <img src="img/profile/default-avatar.png" class="img-fluid" style="border-radius: 50%;">
                         <h4 class="card-title">Erwin</h4>
-                        <p class="card-text">youngsta4500</p>
+                        <p class="card-text">@youngsta4500</p>
                         <a href="https://www.twitch.tv/youngsta4500" target="_blank"
                             class="btn btn-outline-secondary">Twitch Channel</a>
                     </div>
@@ -176,7 +176,7 @@
                     <div class="card-body text-center">
                         <img src="img/profile/default-avatar.png" class="img-fluid" style="border-radius: 50%;">
                         <h4 class="card-title">Steve</h4>
-                        <p class="card-text">Snyperkiller</p>
+                        <p class="card-text">@Snyperkiller</p>
                         <a href="https://www.twitch.tv/snyperkiller" target="_blank"
                             class="btn btn-outline-secondary">Twitch Channel</a>
                     </div>
@@ -187,7 +187,7 @@
                     <div class="card-body text-center">
                         <img src="img/profile/default-avatar.png" class="img-fluid" style="border-radius: 50%;">
                         <h4 class="card-title">Keiwon</h4>
-                        <p class="card-text">themagethatsgood</p>
+                        <p class="card-text">@themagethatsgood</p>
                         <a href="https://www.twitch.tv/themagethatsgood" target="_blank"
                             class="btn btn-outline-secondary">Twitch Channel</a>
                     </div>
@@ -198,7 +198,7 @@
                     <div class="card-body text-center">
                         <img src="img/profile/default-avatar.png" class="img-fluid" style="border-radius: 50%;">
                         <h4 class="card-title">Johnatan</h4>
-                        <p class="card-text">sythryl</p>
+                        <p class="card-text">@sythryl</p>
                         <a href="https://www.twitch.tv/sythryl" target="_blank" class="btn btn-outline-secondary">Twitch
                             Channel</a>
                     </div>
