--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <!-- Company Message -->
     <section class="container-fluid padding">
-        <div class="row mission-header text-center">
+        <div class="row content-header text-center">
             <div class="col-12">
                 <h1 class="display-4">Who we are</h1>
             </div>
@@ -74,9 +74,10 @@
     <hr class="my-4">
     <!--- Two Column Section -->
     <div class="conatiner-fluid padding">
-        <div class="row text-center">
+        <div class="row text-center content-header">
             <div class="col-12">
                 <h2 class="display-4">Latest News</h2>
+                <hr>
             </div>
         </div>
     </div>
@@ -126,7 +127,7 @@
 
     <!-- Meet the Team -->
     <div class="container-fluid padding">
-        <div class="row team-header text-center">
+        <div class="row content-header text-center">
             <div class="col-12">
                 <h1 class="display-4">Meet the Team</h1>
             </div>
@@ -210,25 +211,33 @@
     <hr class="my-4">
     <!--- Two Column Section -->
     <div class="conatiner-fluid padding">
-        <div class="row padding text-center">
+        <div class="row content-header text-center">
             <div class="col-12">
                 <h2 class="display-4">Spotlight</h2>
+                <hr>
                 <br>
             </div>
         </div>
     </div>
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-        </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="img/highlight1.jpg" alt="background1">
+                <img class="d-block w-100 img-fluid" src="img/spotlight/lanzeral-crop.PNG" alt="First slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Lanzeral hits 300 followers!</h5>
+                </div>
             </div>
             <div class="carousel-item">
-                <img src="img/highlight2.jpg" alt="background2">
+                <img class="d-block w-100 img-fluid" src="img/spotlight/themagethatsgood-dps.jpg" alt="Second slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>themagethatsgood out DPS's the team in MHW</h5>
+                </div>
             </div>
             <div class="carousel-item">
-                <img src="img/highlight3.jpg" alt="background3">
+                <img class="d-block w-100 img-fluid" src="img/spotlight/sythryl-toxic-crop.png" alt="Third slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Sythril being toxic at Snyperkiller in League ARURF!!</h5>
+                </div>
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -241,25 +250,28 @@
         </a>
     </div>
 
+
     <!-- Sponsors -->
     <section class="sponsors"></section>
 
     <!--- Donations -->
-    <section class="container-fluid padding">
-        <div class="row mission-header text-center">
-            <div class="col-12">
+    <section class="container-fluid">
+        <div class="row content-header text-center">
+            <div class="col-sm-12">
                 <h1 class="display-4">Community</h1>
             </div>
             <hr>
             <div class="col-12 mission-statement">
-                <p>Join the discord to learn more!</p>
+                <p>Join us in the Black Hammer discord to learn more</p>
+                <a href="https://discord.gg/4FbmrgN" target="_blank"
+                class="btn btn-outline-secondary">Discord</a>    
             </div>
         </div>
     </section>
 
     <!--- Footer -->
     <footer>
-        <div class="cotainer-fluid padding">
+        <div class="cotainer-fluid">
             <div class="row text-center">
                 <div class="col-md-6">
                     <a href="#">
@@ -276,7 +288,7 @@
                     </a>
                     <a href="#">
                         <p>blackhammer@gmail.com</p>
-                    </a>     
+                    </a>
                     <!-- <a href="#">
                         <p>Twitter</p>
                     </a>
