small edit, PNG to png

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100 img-fluid" src="img/spotlight/lanzeral-crop.PNG" alt="First slide">
+                <img class="d-block w-100 img-fluid" src="img/spotlight/lanzeral-crop.png" alt="First slide">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Lanzeral hits 300 followers!</h5>
                 </div>
