--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100 img-fluid" src="img/spotlight/themagethatsgood-dps.jpg" alt="Second slide">
+                <img class="d-block w-100 img-fluid" src="img/spotlight/themagethatsgood-dps.png" alt="Second slide">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>themagethatsgood out DPS's the team in MHW</h5>
                 </div>
@@ -252,7 +252,7 @@
 
 
     <!-- Sponsors -->
-    <section class="sponsors"></section>
+    <!-- <section class="sponsors"></section> -->
 
     <!--- Donations -->
     <section class="container-fluid">
