cleaned up code and images

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <!-- navbar,  -->
-    <nav class="navbar navbar-expand-lg navbar-light navbar-custom fixed-top shadow">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-custom fixed-top shadow">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Black Hammer</a>
 
@@ -45,18 +45,17 @@
                     </li>
                 </ul>
             </div>
-
         </div>
     </nav>
 
     <!-- Slideshow/hero -->
     <!-- note, make a full screen background video of us playing MK 11 in the future :D -->
-    <div class="jumbotron jumbotron-fluid">
+    <section class="jumbotron jumbotron-fluid">
         <div class="container hero-text">
             <h1>Welcome to Black Hammer</h1>
             <p>TSU's first esports team</p>
         </div>
-    </div>
+    </section>
 
     <!-- Company Message -->
     <section class="container-fluid padding">
