--- a/index.html
+++ b/index.html
@@ -221,19 +221,19 @@
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100 img-fluid" src="img/spotlight/lanzeral-crop.png" alt="First slide">
+                <img class="d-block w-100 img-fluid" style="height:700px; object-fit: cover;" src="img/spotlight/lanzeral-crop.png" alt="First slide">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Lanzeral hits 300 followers!</h5>
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100 img-fluid" src="img/spotlight/themagethatsgood-dps.png" alt="Second slide">
+                <img class="d-block w-100 img-fluid" style="height:700px; object-fit: cover;" src="img/spotlight/themagethatsgood-dps.png" alt="Second slide">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>themagethatsgood out DPS's the team in MHW</h5>
+                    <h5>youngsta4500 out DPS's the team in MHW</h5>
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100 img-fluid" src="img/spotlight/sythryl-toxic-crop.png" alt="Third slide">
+                <img class="d-block w-100 img-fluid" style="height:700px; object-fit: cover;" src="img/spotlight/sythryl-toxic-crop.png" alt="Third slide">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Sythril being toxic at Snyperkiller in League ARURF!!</h5>
                 </div>
