--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <div class="card" style="border:none;">
                     <div class="card-body text-center">
                         <img src="img/profile/default-avatar.png" class="img-fluid" style="border-radius: 50%;">
-                        <h4 class="card-title">Erwin</h4>
+                        <h4 class="card-title">Irwin</h4>
                         <p class="card-text">@youngsta4500</p>
                         <a href="https://www.twitch.tv/youngsta4500" target="_blank"
                             class="btn btn-outline-secondary">Twitch Channel</a>
