--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
                 <ul class="navbar-nav ml-auto">
                     <!-- ml-auto, causes right alignment -->
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="#home">Home<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">News</a>
+                        <a class="nav-link" href="#news">News</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Team</a>
+                        <a class="nav-link" href="#team">Team</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Spotlight</a>
+                        <a class="nav-link" href="#spotlight">Spotlight</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Community</a>
+                        <a class="nav-link" href="#community">Community</a>
                     </li>
                 </ul>
             </div>
@@ -50,7 +50,7 @@
 
     <!-- Slideshow/hero -->
     <!-- note, make a full screen background video of us playing MK 11 in the future :D -->
-    <section class="jumbotron jumbotron-fluid">
+    <section id="home" class="jumbotron jumbotron-fluid">
         <div class="container hero-text">
             <h1>Welcome to Black Hammer</h1>
             <p>TSU's first esports team</p>
@@ -70,7 +70,7 @@
             </div>
         </div>
     </section>
-    <hr class="my-4">
+    <hr class="my-4" id="news">
     <!--- Two Column Section -->
     <div class="conatiner-fluid padding">
         <div class="row text-center content-header">
@@ -122,7 +122,7 @@
         </div>
     </div>
     <br>
-    <hr class="my-4">
+    <hr id="team" class="my-4">
 
     <!-- Meet the Team -->
     <div class="container-fluid padding">
@@ -207,7 +207,7 @@
         </div>
     </div>
 
-    <hr class="my-4">
+    <hr id="spotlight" class="my-4">
     <!--- Two Column Section -->
     <div class="conatiner-fluid padding">
         <div class="row content-header text-center">
@@ -227,7 +227,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100 img-fluid" style="height:700px; object-fit: cover;" src="img/spotlight/themagethatsgood-dps.png" alt="Second slide">
+                <img class="d-block w-100 img-fluid" style="height:700px; object-fit: cover;" src="img/spotlight/irwindoingdps.png.PNG" alt="Second slide">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>youngsta4500 out DPS's the team in MHW</h5>
                 </div>
@@ -253,6 +253,7 @@
     <!-- Sponsors -->
     <!-- <section class="sponsors"></section> -->
 
+    <hr id="community" class="my-4">
     <!--- Donations -->
     <section class="container-fluid">
         <div class="row content-header text-center">
