--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100 img-fluid" style="height:700px; object-fit: cover;" src="img/spotlight/irwindoingdps.png.PNG" alt="Second slide">
+                <img class="d-block w-100 img-fluid" style="height:700px; object-fit: cover;" src="img/spotlight/irwindoingdps.png" alt="Second slide">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>youngsta4500 out DPS's the team in MHW</h5>
                 </div>
