trying to add overlays to news images

--- a/index.html
+++ b/index.html
@@ -83,19 +83,23 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                <div class="news-img1">
+                <div class="box">
+                <div class="news-img1 img-fade">
                     <div class="news-text">
                         <h5>MK 11 Tournament in <br>the making</h5>
                     </div>
                 </div>
+            </div>
                 </br>
             </div>
             <div class="col-sm-6">
-                <div class="news-img2">
+                <div class="box">
+                <div class="news-img2 img-fade">
                     <div class="news-text">
                         <h5>Discord Changes</h5>
                     </div>
                 </div>
+            </div>
                 </br>
             </div>
         </div>
@@ -104,18 +108,22 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                <div class="news-img3">
+                <div class="box">
+                <div class="news-img3 img-fade">
                     <div class="news-text">
                         <h5>BlackHammer raids MHW</h5>
                     </div>
                 </div>
+            </div>
                 </br>
             </div>
             <div class="col-sm-6">
-                <div class="news-img4">
+                <div class="box">
+                <div class="news-img4 img-fade">
                     <div class="news-text">
                         <h5>Lanzeral became an Ambassador</h5>
                     </div>
+                </div>
                 </div>
                 </br>
             </div>
