--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Black Hammer</title>
-
+    <link rel="icon" href="/img/favicon.ico" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -119,11 +119,13 @@
             </div>
             <div class="col-sm-6">
                 <div class="box">
-                <div class="news-img4 img-fade">
-                    <div class="news-text">
-                        <h5>Lanzeral became an Ambassador</h5>
-                    </div>
-                </div>
+                    <a href="https://www.greenmangaming.com/?tap_a=1964-996bbb&tap_s=694626-2735fc" target="_blank" style="text-decoration:none;">
+                        <div class="news-img4 img-fade">
+                            <div class="news-text">
+                                <h5>Lanzeral became an Ambassador</h5>
+                            </div>
+                        </div>
+                    </a>
                 </div>
                 </br>
             </div>
@@ -147,7 +149,7 @@
             <div class="col-md-4">
                 <div class="card" style="border:none;">
                     <div class="card-body text-center">
-                        <img src="img/profile/default-avatar.png" class="img-fluid" style="border-radius: 50%;">
+                        <img src="img/profile/default-avatar.png" class="img-fluid" style="border-radius: 50%; width: 300px;">
                         <h4 class="card-title">Anthony</h4>
                         <p class="card-text">@antpowe11</p>
                         <a href="https://www.twitch.tv/antpowe11" target="_blank"
@@ -158,7 +160,7 @@
             <div class="col-md-4">
                 <div class="card" style="border:none;">
                     <div class="card-body text-center">
-                        <img src="img/profile/default-avatar.png" class="img-fluid" style="border-radius: 50%;">
+                        <img src="img/profile/lanzeral-avatar.png" class="img-fluid" style="width: 300px;">
                         <h4 class="card-title">Antonio</h4>
                         <p class="card-text">@Lanzeral</p>
                         <a href="https://www.twitch.tv/lanzeral" target="_blank"
@@ -182,7 +184,7 @@
             <div class="col-md-4">
                 <div class="card" style="border:none;">
                     <div class="card-body text-center">
-                        <img src="img/profile/default-avatar.png" class="img-fluid" style="border-radius: 50%;">
+                        <img src="img/profile/steve-avatar.jpg" class="img-fluid" style="border-radius: 50%; width: 300px;">
                         <h4 class="card-title">Steve</h4>
                         <p class="card-text">@Snyperkiller</p>
                         <a href="https://www.twitch.tv/snyperkiller" target="_blank"
@@ -194,9 +196,9 @@
                 <div class="card" style="border:none;">
                     <div class="card-body text-center">
                         <img src="img/profile/default-avatar.png" class="img-fluid" style="border-radius: 50%;">
-                        <h4 class="card-title">Keiwon</h4>
-                        <p class="card-text">@themagethatsgood</p>
-                        <a href="https://www.twitch.tv/themagethatsgood" target="_blank"
+                        <h4 class="card-title">Open Spot</h4>
+                        <p class="card-text">Open Spot</p>
+                        <a href="#" target="_blank"
                             class="btn btn-outline-secondary">Twitch Channel</a>
                     </div>
                 </div>
@@ -205,9 +207,9 @@
                 <div class="card" style="border:none;">
                     <div class="card-body text-center">
                         <img src="img/profile/default-avatar.png" class="img-fluid" style="border-radius: 50%;">
-                        <h4 class="card-title">Johnatan</h4>
-                        <p class="card-text">@sythryl</p>
-                        <a href="https://www.twitch.tv/sythryl" target="_blank" class="btn btn-outline-secondary">Twitch
+                        <h4 class="card-title">Open Spot</h4>
+                        <p class="card-text">Open Spot</p>
+                        <a href="#" target="_blank" class="btn btn-outline-secondary">Twitch
                             Channel</a>
                     </div>
                 </div>
@@ -231,7 +233,7 @@
             <div class="carousel-item active">
                 <img class="d-block w-100 img-fluid" style="height:700px; object-fit: cover;" src="img/spotlight/lanzeral-crop.png" alt="First slide">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Lanzeral hits 300 followers!</h5>
+                    <h5>Lanzeral hits 700 followers!</h5>
                 </div>
             </div>
             <div class="carousel-item">
@@ -282,7 +284,7 @@
         <div class="cotainer-fluid">
             <div class="row text-center">
                 <div class="col-md-6">
-                    <a href="#">
+                    <a href="https://discord.gg/4FbmrgN" target="_blank">
                         <p>Contact us</p>
                     </a>
                     <a href="#">
