--- a/index.html
+++ b/index.html
@@ -84,21 +84,25 @@
         <div class="row">
             <div class="col-sm-6">
                 <div class="box">
-                <div class="news-img1 img-fade">
-                    <div class="news-text">
-                        <h5>MK 11 Tournament in <br>the making</h5>
-                    </div>
+                    <a href="https://forms.gle/HBmvbzmEe4Dh8v4X6" target="_blank" style="text-decoration:none;">
+                        <div class="news-img1 img-fade">
+                            <div class="news-text">
+                                <h5>MK 11 Tournament coming SOON</h5>
+                            </div>
+                        </div>
+                    </a>
                 </div>
-            </div>
                 </br>
             </div>
             <div class="col-sm-6">
                 <div class="box">
-                <div class="news-img2 img-fade">
-                    <div class="news-text">
-                        <h5>Discord Changes</h5>
-                    </div>
-                </div>
+                    <a href="https://discord.gg/4FbmrgN" target="_blank" style="text-decoration:none;">
+                        <div class="news-img2 img-fade">
+                            <div class="news-text">
+                                <h5>Discord Changes</h5>
+                            </div>
+                        </div>
+                    </a>
             </div>
                 </br>
             </div>
