--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     <a href="https://forms.gle/HBmvbzmEe4Dh8v4X6" target="_blank" style="text-decoration:none;">
                         <div class="news-img1 img-fade">
                             <div class="news-text">
-                                <h5>MK 11 Tournament coming SOON</h5>
+                                <h5>MK 11 Tournament coming SOON </br> click to sign up</h5>
                             </div>
                         </div>
                     </a>
@@ -300,7 +300,7 @@
                     <a href="#">
                         <p>Partner with us</p>
                     </a>
-                    <a href="#">
+                    <a href="mailto:blackhammer@gmail.com" target="_blank">
                         <p>blackhammer@gmail.com</p>
                     </a>
                     <!-- <a href="#">
